--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,9 @@
 upstream frontend {
-    server client:3000;
+    server frontend:3000;
 }
 
 upstream backend {
-    server library-api:5000;
+    server backend:5000;
 }
 
 
