--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       build:
          context: ./electronic_backend
          dockerfile: Dockerfile.dev
-      container_name: library_mern_nginx
+      container_name: backend_container
     
       volumes:
          - /app/node_modules
@@ -18,8 +18,7 @@ services:
       environment:
          NODE_ENV: ${NODE_ENV}
          MONGO_URI: mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@mongodb
-      networks:
-         - library-mern-api
+     
 
    mongodb:
       image: mongo
@@ -32,8 +31,7 @@ services:
       volumes:
          # for persistence storage
          - mongodb-data:/data/db
-      networks:
-         - library-mern-api
+      
    mongo-express:
       image: mongo-express
       depends_on:
@@ -48,41 +46,36 @@ services:
          ME_CONFIG_BASICAUTH_PASSWORD: admin123456
       volumes:
          - mongodb-data
-      networks:
-         - library-mern-api
+    
 
    frontend:
       restart: always
       build:
          context: ./electronic_frontend
-         dockerfile: Dockerfile.dev
-      container_name: library_mern_frontend
+         dockerfile: Dockerfile
+      container_name: electricity_frontend
       volumes:
          - ./app/node_modules
          - ./electronic_frontend:/app
       ports:
           - 3000:3000
       depends_on:
-         - library-api
-      networks:
-         - library-mern-api
+         - backend
+    
 
    nginx:
       restart: always
       depends_on:
-         - library-api
-         - client
+         - backend
+         - frontend
       build:
          context: ./nginx
          dockerfile: Dockerfile.dev
       ports:
          - 8080:80
-      networks:
-         - library-mern-api
+    
 
-networks:
-   library-mern-api:
-      driver: bridge
+
 
 volumes:
    mongodb-data:
