--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,23 @@ version: '3.8'
 
 services: 
   frontend:
-    image: izerekerie/frontend-image:latest
+    image: izerekerie/online_electricity_frontend-image:latest
     stdin_open: true 
     tty: true 
     build: 
       context: electronic_frontend
       dockerfile: Dockerfile
     ports:
-      - '80:3000'
+      - '3000:3000'
   backend:
     image: izerekerie/online_electricity_backend_image:latest
     stdin_open: true
     tty: true 
     build: 
-      context: izerekerie/online_electricity_backend_image:latest
+      context: electronic_backend
       dockerfile: Dockerfile
     ports:
-      - '3000:3000'
+      - '5000:5000'
   db:
     image: izerekerie/db-image:latest
     stdin_open: true
@@ -30,5 +30,11 @@ services:
       - '5832:5832'
     volumes:
       - mongodb-data:/data/db
+  nginx:
+    build: 
+      context: nginx
+      dockerfile: Dockerfile
+    ports:
+      - '80:80' 
 volumes:
-  db:
+  mongodb-data:
